--- a/spring-cloud-consumer-user01/src/main/resources/bootstrap.yaml
+++ b/spring-cloud-consumer-user01/src/main/resources/bootstrap.yaml
@@ -3,6 +3,8 @@ server:
   servlet:
     context-path: /api/consumer
 spring:
+  profiles:
+    active: dev
   application:
     name: spring-cloud-user-consumer
   cloud:
@@ -16,8 +18,8 @@ spring:
         username: nacos
         password: nacos
         file-extension: yaml
-
-
+        namespace: 3a43497c-68c1-4859-8170-82e01b0a250a
+        group: TEST_GROUP
 feign:
   circuitbreaker:
     enabled: true
@@ -46,8 +48,3 @@ client:
   application:
     name:
       department: ${DEPARTMENT_APPLICATION_NAME:spring-cloud-department-provider}
-
-nacos:
-  consumer:
-    key: key
-    value: value
