--- a/spring-cloud-provider-department02/pom.xml
+++ b/spring-cloud-provider-department02/pom.xml
@@ -39,6 +39,10 @@
       <artifactId>spring-cloud-starter-bootstrap</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-loadbalancer</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
