--- a/spring-cloud-consumer-user02/pom.xml
+++ b/spring-cloud-consumer-user02/pom.xml
@@ -18,9 +18,37 @@
     <open-feign.version>3.1.3</open-feign.version>
     <guava-version>31.1-jre</guava-version>
     <nacos.version>2021.1</nacos.version>
+    <mybatis-plus.version>3.5.0</mybatis-plus.version>
+    <mysql-connector.version>8.0.30</mysql-connector.version>
+    <feign-httpclient.version>11.8</feign-httpclient.version>
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.example</groupId>
+      <artifactId>spring-cloud-common</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-boot-starter</artifactId>
+      <version>${mybatis-plus.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus</artifactId>
+      <version>${mybatis-plus.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql-connector.version}</version>
+    </dependency>
+
     <!-- nacos注册中心-->
     <dependency>
       <groupId>com.alibaba.cloud</groupId>
@@ -59,11 +87,17 @@
       <version>${open-feign.version}</version>
     </dependency>
 
+    <!--解决Feign无法发送Patch请求 版本要与feign-core一致-->
+    <dependency>
+      <groupId>io.github.openfeign</groupId>
+      <artifactId>feign-httpclient</artifactId>
+      <version>${feign-httpclient.version}</version>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-loadbalancer</artifactId>
     </dependency>
-
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
