--- a/spring-cloud-provider-department01/src/main/resources/bootstrap.yaml
+++ b/spring-cloud-provider-department01/src/main/resources/bootstrap.yaml
@@ -4,7 +4,7 @@ server:
     context-path: /api/provider
 spring:
   profiles:
-    active: prod
+    active: dev
   application:
     name: spring-cloud-department-provider
   cloud:
@@ -18,5 +18,3 @@ spring:
         username: nacos
         password: nacos
         file-extension: yaml
-        group: TSET_GROUP
-        namespace: 10fbced2-b28a-46fd-bbf0-f34c2637331a
