--- a/spring-cloud-provider-department02/pom.xml
+++ b/spring-cloud-provider-department02/pom.xml
@@ -15,9 +15,35 @@
     <spring-boot.version>2.6.7</spring-boot.version>
     <spring-cloud.version>2021.0.3</spring-cloud.version>
     <nacos.version>2021.1</nacos.version>
+    <mybatis-plus.version>3.5.2</mybatis-plus.version>
+    <mysql-connector.version>8.0.30</mysql-connector.version>
   </properties>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.example</groupId>
+      <artifactId>spring-cloud-common</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-boot-starter</artifactId>
+      <version>${mybatis-plus.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus</artifactId>
+      <version>${mybatis-plus.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql-connector.version}</version>
+    </dependency>
 
     <!-- nacos注册中心-->
     <dependency>
